Filtrering på faggruppekode i oppdragssøk
